<resources>
    <string name="app_name">IMDMarket</string>
    <string name="header_title">IMDMARKET</string>
    <string name="login_label">Login:</string>
    <string name="senha_label">Senha:</string>
    <string name="login_hint">Login</string>
    <string name="senha_hint">Senha</string>
    <string name="login_btn">Entrar</string>
    <string name="forget_password_btn">Esqueci minha senha/login</string>
    <string name="text_view_menu">O que deseja fazer?</string>
    <string name="cadastrar_btn">Cadastrar produto</string>
    <string name="listar_btn">Listar produtos</string>
    <string name="alterar_btn">Alterar produto</string>
    <string name="deletar_btn">Deletar produto</string>
    <string name="label_codigo_produto">Código do produto:</string>
    <string name="label_nome_produto">Nome do produto:</string>
    <string name="label_descricao_produto">Descrição do produto:</string>
    <string name="label_estoque">Estoque:</string>
    <string name="salvar_btn">Salvar</string>
    <string name="salvar_alteracao_btn">Alterar</string>
    <string name="deletar_produto_btn">Deletar</string>
    <string name="limpar_btn">Limpar</string>
    <string name="voltar_btn">Voltar</string>
    <string name="text_view_listar">Lista de produtos</string>
    <string name="text_view_recuperar">Recuperar senha</string>
    <string name="nova_senha_label">Nova Senha:</string>
    <string name="nova_senha_hint">Digite a nova senha</string>
    <string name="salvar_nova_senha_btn">Salvar nova senha</string>
</resources>